--- a/res/xml/android.xml
+++ b/res/xml/android.xml
@@ -16,4 +16,28 @@
  -->
 
 <resource-redirections>
+    <item name="drawable/progress_large_holo">@drawable/alphablue_progress_large_holo</item>
+    <item name="drawable/progress_large_white">@drawable/alphablue_progress_large_holo</item>
+    <item name="drawable/progress_large">@drawable/alphablue_progress_large_holo</item>
+    <item name="drawable/progress_medium_holo">@drawable/alphablue_progress_medium_holo</item>
+    <item name="drawable/progress_medium_white">@drawable/alphablue_progress_medium_holo</item>
+    <item name="drawable/progress_medium">@drawable/alphablue_progress_medium_holo</item>
+    <item name="drawable/progress_small_holo">@drawable/alphablue_progress_small_holo</item>
+    <item name="drawable/progress_small_white">@drawable/alphablue_progress_small_holo</item>
+    <item name="drawable/progress_small">@drawable/alphablue_progress_small_holo</item>
+    <item name="drawable/spinner_76_outer_holo">@drawable/frameworks_res_spinner_76_outer_holo</item>
+    <item name="drawable/spinner_76_inner_holo">@drawable/frameworks_res_spinner_76_inner_holo</item>
+    <item name="drawable/spinner_48_outer_holo">@drawable/frameworks_res_spinner_48_outer_holo</item>
+    <item name="drawable/spinner_48_inner_holo">@drawable/frameworks_res_spinner_48_inner_holo</item>
+    <item name="drawable/spinner_20_outer_holo">@drawable/frameworks_res_spinner_20_outer_holo</item>
+    <item name="drawable/spinner_20_inner_holo">@drawable/frameworks_res_spinner_20_inner_holo</item>
+    <item name="drawable/spinner_16_outer_holo">@drawable/frameworks_res_spinner_16_outer_holo</item>
+    <item name="drawable/spinner_16_inner_holo">@drawable/frameworks_res_spinner_16_inner_holo</item>
+    <item name="drawable/spinner_black_76">@drawable/frameworks_res_spinner_76_outer_holo</item>
+    <item name="drawable/spinner_white_76">@drawable/frameworks_res_spinner_76_outer_holo</item>
+    <item name="drawable/spinner_black_48">@drawable/frameworks_res_spinner_48_outer_holo</item>
+    <item name="drawable/spinner_white_48">@drawable/frameworks_res_spinner_48_outer_holo</item>
+    <item name="drawable/spinner_black_20">@drawable/frameworks_res_spinner_20_outer_holo</item>
+    <item name="drawable/spinner_black_16">@drawable/frameworks_res_spinner_16_outer_holo</item>
+    <item name="drawable/spinner_white_16">@drawable/frameworks_res_spinner_16_outer_holo</item>
 </resource-redirections>
