add menu_big, move icon 6px down

--- a/res/xml/com_android_systemui.xml
+++ b/res/xml/com_android_systemui.xml
@@ -25,4 +25,6 @@
     <item name="drawable/ic_sysbar_recent_land">@drawable/com_android_systemui_ic_sysbar_recent_land</item>
     <item name="drawable/ic_sysbar_menu">@drawable/com_android_systemui_ic_sysbar_menu</item>
     <item name="drawable/ic_sysbar_menu_land">@drawable/com_android_systemui_ic_sysbar_menu_land</item>
+    <item name="drawable/ic_sysbar_menu_big">@drawable/com_android_systemui_ic_sysbar_menu_big</item>
+    <item name="drawable/ic_sysbar_menu_big_land">@drawable/com_android_systemui_ic_sysbar_menu_big_land</item>
 </resource-redirections>
