--- a/res/xml/com_android_systemui.xml
+++ b/res/xml/com_android_systemui.xml
@@ -27,4 +27,6 @@
     <item name="drawable/ic_sysbar_menu_land">@drawable/com_android_systemui_ic_sysbar_menu_land</item>
     <item name="drawable/ic_sysbar_menu_big">@drawable/com_android_systemui_ic_sysbar_menu_big</item>
     <item name="drawable/ic_sysbar_menu_big_land">@drawable/com_android_systemui_ic_sysbar_menu_big_land</item>
+    <item name="drawable/ic_sysbar_recent_clear">@drawable/com_android_systemui_ic_sysbar_recent_clear</item>
+    <item name="drawable/ic_sysbar_recent_clear_land">@drawable/com_android_systemui_ic_sysbar_recent_clear_land</item>
 </resource-redirections>
